--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "website",
   "version": "0.1.0",
-  "homepage": "https://github.com/anagh534/music",
+  "homepage": "http://anagh534.github.io/music",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
