--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,6 +17,13 @@
       "type": "image/png",
       "sizes": "512x512"
     }
+    ,
+    {
+      "src": "logo192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    }
   ],
   "start_url": ".",
   "display": "standalone",
