--- a/public/manifest.json
+++ b/public/manifest.json
@@ -19,7 +19,7 @@
     }
     ,
     {
-      "src": "logo192.png",
+      "src": "maskable_icon.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
